# paddle_ocr_tensorrt

./: CMakeLists.txt  README.md  convert.sh  demo.cpp  infer.sh  main.cpp
include/: ocr_out.h  utility.h
myModels/dict_txt/: key.txt  output.txt
src/: args.cpp  det.cpp  ocr.cpp  ocr_out.cpp  utility.cpp
